--- a/index.html
+++ b/index.html
@@ -18,37 +18,100 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <nav class="navbar navbar-expand-sm navbar-light bg-dark">
+
             <a class="navbar-brand" href="#">
-              <img src="../assets/img/duck.png" alt="Logo" width="100" height="100">
+
+            <img src="../assets/img/duck.png" alt="Logo" width="100" height="100">
+
             </a>
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+
+            <span class="navbar-toggler-icon"></span>
+
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto">
+
+            <ul class="navbar-nav ml-auto">
+
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Catalogo libri <span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Anagrafica Utenti</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Storico Prestiti</a>
+
+                <a class="nav-link fw-light text-secondary " href="#">Catalogo libri <span class="sr-only"></span></a>
+
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Help</a>
-                  </li>
-              </ul>
+                <a class="nav-link fw-light text-secondary" href="#">Anagrafica Utenti</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                <a class="nav-link fw-light text-secondary" href="#">Storico Prestiti</a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link fw-light text-secondary" href="#">Help</a>
+
+                </li>
+
+            </ul>
+
             </div>
-          </nav>
+
+        </nav>
 
     </header>
 
 
 
-    <main></main>
+    <main>
+
+        <div class="container text-center my-5">
+
+            <div class="row">
+
+                <div class="col text-start">
+
+                    <p class="text-uppercase">Catalogo libri</p>
+
+                </div>
+
+                <div class="col text-end">
+
+                    <a class="btn btn-primary" href="#">Aggiungi libro</a>
+
+                </div>
+
+            </div>
+
+            <div>
+
+                <table class="table table-striped my-5 text-start">
+
+                    <thead>
+                        <tr>
+
+                            <th>Titolo</th>
+                            <th>Data prestito</th>
+                            <th>Stato</th>
+                            <th>Azioni</th>
+                            
+                        </tr>
+                    </thead>
+
+
+                </table>
+
+            </div>
+
+        </div>
+
+    </main>
 
 
 
