--- a/index.html
+++ b/index.html
@@ -100,11 +100,181 @@
                             <th>Data prestito</th>
                             <th>Stato</th>
                             <th>Azioni</th>
-                            
+
                         </tr>
                     </thead>
 
+                    <tbody>
 
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I promessi sposi</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>Il signore degli anelli</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                        <tr class="table-bg-light">
+
+                            <td>I pilastri della terra</td>
+
+                            <td>-</td>
+
+                            <td>
+                                <span class="badge bg-success">Disponibile</span>
+                            </td>
+
+                            <td></td>
+
+                        </tr>
+
+                    </tbody>
                 </table>
 
             </div>
