--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <title>Bootstrap</title>
 
 </head>
@@ -77,7 +79,7 @@
 
                 <div class="col text-start">
 
-                    <p class="text-uppercase">Catalogo libri</p>
+                    <p class="text-uppercase fs-4">Catalogo libri</p>
 
                 </div>
 
@@ -108,7 +110,7 @@
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">I pilastri della terra</td>
 
                             <td>-</td>
 
@@ -116,13 +118,27 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                        <i class="fas fa-pen"></i>
+
+                                    </button>
+
+                                    <button class="btn btn-sm btn-secondary rounded-square">
+
+                                        <i class="fas fa-trash"></i>
+
+                                    </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I promessi sposi</td>
+                            <td class="small pb-3">I promessi sposi</td>
 
                             <td>-</td>
 
@@ -130,27 +146,55 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>Il signore degli anelli</td>
+                            <td class="small pb-3">Il signore degli anelli</td>
 
-                            <td>-</td>
+                            <td>18/10/2023</td>
 
                             <td>
-                                <span class="badge bg-success">Disponibile</span>
+                                <span class="badge bg-warning">In prestito</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Harry Potter e la pietra filosofale</td>
 
                             <td>-</td>
 
@@ -158,27 +202,55 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Il codice Da Vinci</td>
 
                             <td>-</td>
 
                             <td>
-                                <span class="badge bg-success">Disponibile</span>
+                                <span class="badge bg-danger">Non disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Shining</td>
 
                             <td>-</td>
 
@@ -186,27 +258,55 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">La divina commedia</td>
 
-                            <td>-</td>
+                            <td>21/09/2023</td>
 
                             <td>
-                                <span class="badge bg-success">Disponibile</span>
+                                <span class="badge bg-warning">In prestito</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Il trono di spade</td>
 
                             <td>-</td>
 
@@ -214,41 +314,83 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Il mondo di Sofia</td>
 
                             <td>-</td>
 
                             <td>
-                                <span class="badge bg-success">Disponibile</span>
+                                <span class="badge bg-danger">Non disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Le cronache di Narnia: il leone, la strega e l'armadio</td>
 
-                            <td>-</td>
+                            <td>25/07/2023</td>
 
                             <td>
-                                <span class="badge bg-success">Disponibile</span>
+                                <span class="badge bg-warning">In prestito</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">Il piccolo principe</td>
 
                             <td>-</td>
 
@@ -256,13 +398,27 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
                         <tr class="table-bg-light">
 
-                            <td>I pilastri della terra</td>
+                            <td class="small pb-3">La storia infinita</td>
 
                             <td>-</td>
 
@@ -270,7 +426,21 @@
                                 <span class="badge bg-success">Disponibile</span>
                             </td>
 
-                            <td></td>
+                            <td>
+
+                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+
+                                    <i class="fas fa-pen"></i>
+
+                                </button>
+
+                                <button class="btn btn-sm btn-secondary rounded-square">
+
+                                    <i class="fas fa-trash"></i>
+
+                                </button>
+
+                            </td>
 
                         </tr>
 
