feat: add header funtion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-sm navbar-light bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
 
             <a class="navbar-brand" href="#">
 
@@ -28,9 +28,9 @@
 
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler bg-dark border border-secondary-subtle" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon bg-white"></span>
 
             </button>
 
@@ -40,7 +40,7 @@
 
                 <li class="nav-item active">
 
-                <a class="nav-link fw-light text-secondary " href="#">Catalogo libri <span class="sr-only"></span></a>
+                <a class="nav-link fw-light text-secondary" href="#">Catalogo libri <span class="sr-only"></span></a>
 
                 </li>
 
@@ -99,7 +99,7 @@
                         <tr>
 
                             <th>Titolo</th>
-                            <th>Data prestito</th>
+                            <th class="d-none d-sm-none d-md-flex d-lg-flex">Data prestito</th>
                             <th>Stato</th>
                             <th>Azioni</th>
 
@@ -120,15 +120,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                        <i class="fas fa-pen"></i>
+                                        <i class="fas fa-pen text-secondary"></i>
 
                                     </button>
 
-                                    <button class="btn btn-sm btn-secondary rounded-square">
+                                    <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                        <i class="fas fa-trash"></i>
+                                        <i class="fas fa-trash text-secondary"></i>
 
                                     </button>
 
@@ -148,15 +148,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -176,15 +176,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -204,15 +204,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -232,18 +232,17 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
-
-                                </button>
-
-                                <button class="btn btn-sm btn-secondary rounded-square">
-
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
+
+                                    <i class="fas fa-trash text-secondary"></i>
+
+                                </button>
                             </td>
 
                         </tr>
@@ -260,18 +259,17 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
-
-                                </button>
-
-                                <button class="btn btn-sm btn-secondary rounded-square">
-
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
+
+                                    <i class="fas fa-trash text-secondary"></i>
+
+                                </button>
                             </td>
 
                         </tr>
@@ -288,15 +286,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -316,15 +314,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -344,15 +342,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -372,15 +370,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -400,15 +398,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -428,15 +426,15 @@
 
                             <td>
 
-                                <button class="btn btn-sm btn-secondary rounded-square border mr-2">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle ">
 
-                                    <i class="fas fa-pen"></i>
+                                    <i class="fas fa-pen text-secondary"></i>
 
                                 </button>
 
-                                <button class="btn btn-sm btn-secondary rounded-square">
+                                <button class="btn btn-sm btn-white rounded-square border-secondary-subtle">
 
-                                    <i class="fas fa-trash"></i>
+                                    <i class="fas fa-trash text-secondary"></i>
 
                                 </button>
 
@@ -445,6 +443,7 @@
                         </tr>
 
                     </tbody>
+
                 </table>
 
             </div>
