--- a/form.html
+++ b/form.html
@@ -68,53 +68,54 @@
 
 
     <main>
-
-        <form class="row g-4">
+        
+        <form class="row g-4 my-4 mx-auto w-75">
+            <h1 class="">Nuovo libro</h1>
             <div class="col-md-6">
-              <h4>Nome Autore</h4>
-              <input type="text" class="form-control" id="nomeAutore" placeholder="Inserisci nome autore">
+                <h4>Nome Autore</h4>
+                <input type="text" class="form-control" id="nomeAutore" placeholder="Inserisci nome autore">
             </div>
             <div class="col-md-6">
-              <h4>Cognome Autore</h4>
-              <input type="text" class="form-control" id="cognomeAutore" placeholder="Inserisci cognome autore">
+                <h4>Cognome Autore</h4>
+                <input type="text" class="form-control" id="cognomeAutore" placeholder="Inserisci cognome autore">
             </div>
             <div class="col-12">
-              <h4>Titolo</h4>
-              <input type="text" class="form-control" id="titolo" placeholder="Inserisci titolo libro">
+                <h4>Titolo</h4>
+                <input type="text" class="form-control" id="titolo" placeholder="Inserisci titolo libro">
             </div>
             <div class="col-md-4">
-              <h4>Genere</h4>
-              <select class="form-control" id="genere">
+                <h4>Genere</h4>
+                <select class="form-control" id="genere">
                 <option selected>Seleziona genere</option>
                 <option>Romanzo</option>
                 <option>Saggio</option>
                 <option>Poesia</option>
                 <!-- aggiungi altre opzioni -->
-              </select>
+                </select>
             </div>
             <div class="col-md-4">
-              <h4>Anno di pubblicazione</h4>
-              <input type="number" class="form-control" id="annoPubblicazione" placeholder="Inserisci anno di pubblicazione">
+                <h4>Anno di pubblicazione</h4>
+                <input type="number" class="form-control" id="annoPubblicazione" placeholder="Inserisci anno di pubblicazione">
             </div>
             <div class="col-md-4">
-              <h4>ISBN#</h4>
-              <input type="text" class="form-control" id="isbn" placeholder="Inserisci ISBN#">
+                <h4>ISBN#</h4>
+                <input type="text" class="form-control" id="isbn" placeholder="Inserisci ISBN#">
             </div>
             <hr>
             <div class="col-12">
-              <h4>Note</h4>
-              <textarea class="form-control" id="note" placeholder="Inserisci eventuali note sul libro"></textarea>
+                <h4>Note</h4>
+                <textarea class="form-control" id="note" placeholder="Inserisci eventuali note sul libro"></textarea>
             </div>
             <div class="col-12">
-              <div class="form-check">
+                <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="disponibileDigitale">
                 <label class="form-check-label" for="disponibileDigitale">Disponibile anche in digitale</label>
-              </div>
+                </div>
             </div>
             <div class="col-12">
-              <button type="submit" class="btn btn-primary">Aggiungi libro</button>
+                <button type="submit" class="btn btn-primary">Aggiungi libro</button>
             </div>
-          </form>
+            </form>
 
     </main>
     
