base: exercise completed

--- a/form.html
+++ b/form.html
@@ -101,7 +101,7 @@
                 <h4>ISBN#</h4>
                 <input type="text" class="form-control" id="isbn" placeholder="Inserisci ISBN#">
             </div>
-            <hr>
+            <hr class="my-5">
             <div class="col-12">
                 <h4>Note</h4>
                 <textarea class="form-control" id="note" placeholder="Inserisci eventuali note sul libro"></textarea>
